; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/via/extr_via_clock.c_set_primary_clock_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/via/extr_via_clock.c_set_primary_clock_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VIASR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @set_primary_clock_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_primary_clock_state(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %7 [
    i32 128, label %5
    i32 129, label %6
  ]

5:                                                ; preds = %1
  store i32 32, i32* %3, align 4
  br label %8

6:                                                ; preds = %1
  store i32 0, i32* %3, align 4
  br label %8

7:                                                ; preds = %1
  br label %12

8:                                                ; preds = %6, %5
  %9 = load i32, i32* @VIASR, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @via_write_reg_mask(i32 %9, i32 27, i32 %10, i32 48)
  br label %12

12:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @via_write_reg_mask(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
